# toolboks-cli

./: README.md  pyproject.toml  requirements.txt
toolboks_cli/: __init__.py  __main__.py  _version.py  main.py
toolboks_cli/tests/: __init__.py
